--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -17,6 +17,10 @@
     display: flex;
 }
 
+.flex-column{
+    flex-direction: column;
+}
+
 .space-between{
     justify-content: space-between;
 }
