--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 .container{
     width: 100%;
 }
