--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,3 +1,5 @@
+@use"./partials/variables" as*;
+
 *{
     padding: 0%;
     margin: 0%;
@@ -35,4 +37,13 @@ body{
 
 .align-item-center{
     align-items: center;
+}
+
+.green-text{
+    color:$green-color;
+    font-weight: lighter;
+}
+
+.margin-top{
+    margin-top: 30px;
 }
