--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,4 +1,5 @@
 @use"./partials/variables" as*;
+@import "node_modules/@fortawesome/fontawesome-free/css/all.min.css";
 
 *{
     padding: 0%;
@@ -47,3 +48,16 @@ body{
 .margin-top{
     margin-top: 30px;
 }
+
+.pd-bottom{
+    padding-bottom: 50px;
+}
+
+.bg-color-gray{
+    background-color: $light-gray;
+}
+
+.bold{
+    font-weight: bold;
+}
+
